# University

./: .gitignore  .gitmodules
2018 Herbstsemester/Machine Learning/Assignments/: .dropbox
2018 Herbstsemester/Machine Learning/Machine Learning - Programming/: PyCharm Activation Code.txt
2018 Herbstsemester/Machine Learning/Tutorial/: python-tutorial.ipynb
2019 Frühlingssemester/3D Geometry Processing/: 3DGP.txt
2019 Herbstsemester/Applied Optimization/: README.md
2019 Herbstsemester/Applied Optimization/Exercise 00/: README.md
2019 Herbstsemester/Applied Optimization/Exercise 00/aopt19-exercise0/: CMakeLists.txt
2019 Herbstsemester/Applied Optimization/Exercise 00/aopt19-exercise0/grid_search/: CMakeLists.txt  GridSearch.hh
2019 Herbstsemester/Applied Optimization/Exercise 00/aopt19-exercise0/include/: CSVExporter.hh  FunctionNonConvex2D.hh  FunctionQuadratic2D.hh  FunctionQuadraticND.hh
2019 Herbstsemester/Applied Optimization/Exercise 01/: ReadMe.md
2019 Herbstsemester/Applied Optimization/Exercise 03/: CMakeLists.txt
2019 Herbstsemester/Applied Optimization/Exercise 04/: CMakeLists.txt  Programming.txt
2019 Herbstsemester/Applied Optimization/Exercise 05/: CMakeLists.txt
2019 Herbstsemester/Applied Optimization/Exercise 06/aopt19-exercise6/newton_methods/: CMakeLists.txt  main.cc
2019 Herbstsemester/Applied Optimization/Exercise 07/aopt19-exercise7/ConvexTests2/: CMakeLists.txt  main.cc
2019 Herbstsemester/Applied Optimization/Exercise 07/aopt19-exercise7/MassSpringSystem/: CMakeLists.txt  MassSpringSystem.cc  MassSpringSystem.hh
2019 Herbstsemester/Applied Optimization/Exercise 07/aopt19-exercise7/newton_methods/: CMakeLists.txt  TestProblem.hh  main.cc
2019 Herbstsemester/Cryptography/Zusammenfassung/: Zusammenfassung.1  Zusammenfassung.aux  Zusammenfassung.out  Zusammenfassung.tex
2020 Frühlingssemester/3D Geometry Processing/Lectures/: Lectures_3DGP.aux  Lectures_3DGP.out  Lectures_3DGP.tex
2020 Frühlingssemester/3D Geometry Processing/Summary/: Summary_3DGP.tex
2020 Frühlingssemester/3D Geometry Processing/old_2019 Exercises/Exercise 01/dgp2019-exercise-test/: CMakeLists.txt
2020 Frühlingssemester/3D Geometry Processing/old_2019 Exercises/Exercise 01/dgp2019-exercise-test/cmake/: ConfigureCompiler.cmake  ConfigureEigen.cmake  FindEigen.cmake
2020 Frühlingssemester/3D Geometry Processing/old_2019 Exercises/Exercise 01/dgp2019-exercise-test/lab0_eigen/: CMakeLists.txt  eigen.cpp
2020 Frühlingssemester/Concurrency/Summary/: Summary_Conc.aux  Summary_Conc.out  Summary_Conc.tex
2020 Frühlingssemester/Design and Graphics Programming for Game Developement/Lectures/: Lectures_Game-Design.aux  Lectures_Game-Design.tex
2020 Frühlingssemester/Design and Graphics Programming for Game Developement/Summary/: Summary_Game-Design.tex
2020 Frühlingssemester/Distributed Algorithms/Lectures/: Lectures_Dist-Algo.aux  Lectures_Dist-Algo.blg  Lectures_Dist-Algo.out  Lectures_Dist-Algo.tex
2020 Frühlingssemester/Distributed Algorithms/Summary/: Summary_Dist-Algo.aux  Summary_Dist-Algo.out  Summary_Dist-Algo.tex
2020 Frühlingssemester/Wirtschaftsinformatik/Fragen/: Questions.tex
2020 Frühlingssemester/Wirtschaftsinformatik/Odoo Exercise/: Annahme des Angebotes.eml
2020 Herbstsemester/: Stundenplan v0.1.xlsx
2021 Herbstsemester/Seminar Human Smart Cities/: HC_Proposal_Cities.txt
BACHELOR Thesis/: Passwörter.txt
BACHELOR Thesis/BACHELOR-Arbeit/: .gitignore  BACHELOR-Arbeit.aux  BACHELOR-Arbeit.bbl  BACHELOR-Arbeit.blg  BACHELOR-Arbeit.out  BACHELOR-Arbeit.tex  BACHELOR-Arbeit.toc  literature.bib  packages.tex  pictures.aux
BACHELOR Thesis/Intuitionstest/: Fragebogen.docx  Intuitionstest.docx
BACHELOR Thesis/Konzeptplanung/: Konzeptplanung.docx  Konzeptplanung.tex
BACHELOR Thesis/Youtube-HowTo-Video-Links/: URLs.txt
Curriculum Vitae/: CV_Marcel-Zauder.aux  CV_Marcel-Zauder.tex
LaTeX/: marzstyle.sty
(+956 files in other folders)
